app/app.global.scss
@import "~@fortawesome/fontawesome-free/css/all.css";
@import "./variables.scss";

html, body {
  //background-color: rgb(248, 248, 248);
  background-color: $bgColor;

  //position: relative;
  color: #4b4b4b;
  height: 100%;
}

.dashboardBody {
  padding-left: 20px;
  padding-right: 5px;
  padding-bottom: 10px;
}

.uk-navbar-nav {
  a.active {
    color: #555;
    font-weight: bolder;
  }
}

.uk-subnav {
  a.active {
    color: #555;
    font-weight: bolder;
  }
}

.mainnav {
  padding-left: 20px;
  border-bottom: 1px solid $borderColor;
}

.pad10 {
  padding: 10px;
}


section {
  background-color: white;
  border-radius: 5px;
  //border: 1px solid #cecece;
  padding: 15px;
}

.flexContainer {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  flex-wrap: nowrap;
  height: 100%;

  > div {
    padding-right: 5px;
    margin-right: 5px;
    align-self: flex-start;
    flex-grow: 1;
  }
}

.searchBox {
  margin-top: 10px;
  background-color: oldlace;
}

.sidePanel {
  max-width: 400px;
}

.itemListWrapper {
  margin-top: 10px;

  //height: calc(100vh - 270px);
  overflow-y: auto;
}

.itemList {

  //max-width: 300px;
  background-color: white;
  //border: 1px solid $borderColor;
  display: block;
  //position: relative;
  //bottom: 0px;
  overflow: scroll;

  li {
    padding: 10px;
    cursor: pointer;
    margin: 0 !important;

    //background-color: #e5ffff;
    border-top: 1px solid $borderColor;
    //border-bottom: 1px solid $borderColor;

    &.selected {
      background-color: #3fc3ee;
    }

    &.active {
      background-color: #a5dc86;
    }
  }
}
textarea.epicTextArea{
  min-height: 200px;
  height: 40vh;
  max-width: 100%;
  line-height: 25px;
}


.h100{
  height: 100px;
}


.h200{
  height: 200px;
}

